corrected wrong font file name

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html {
     font-family: 'Inter-Regular';
     font-style: normal;
     font-weight: 400;
-    src: url('./fonts/inter-v20-latin-regular.woff2') format('woff2');
+    src: url('./Fonts/inter-v20-latin-regular.woff2') format('woff2');
 }
 
 /* inter-600 - latin */
@@ -22,7 +22,7 @@ html {
     font-family: 'Inter-SemiBold';
     font-style: normal;
     font-weight: 600;
-    src: url('./fonts/inter-v20-latin-600.woff2') format('woff2');
+    src: url('./Fonts/inter-v20-latin-600.woff2') format('woff2');
 }
 
 /* inter-800 - latin */
@@ -31,7 +31,7 @@ html {
     font-family: 'Inter-Bold';
     font-style: normal;
     font-weight: 800;
-    src: url('./fonts/inter-v20-latin-800.woff2') format('woff2');
+    src: url('./Fonts/inter-v20-latin-800.woff2') format('woff2');
 }
 
 :root {
